# over-the-type

./: .ocamlformat  README.md  dune-project  over-the-type.opam
.github/workflows/: ci.yml
doc/: index.mld
docs/: index.mld
lib/: And.ml  And.mli  And_then.ml  And_then.mli  Bool.ml  Bool.mli  Eq.ml  Eq.mli  False.ml  False.mli  Nat.ml  Nat.mli  Negation.ml  Negation.mli  Neq.ml  Neq.mli  Not.ml  Not.mli  Or.ml  Or.mli  True.ml  True.mli  Unit.ml  Unit.mli  Xor.ml  Xor.mli  dune
lib/Classical/: Law.ml  Law.mli  Laws.ml  Laws.mli  Tactic.ml  Tactic.mli  Tactics.mli
